--- a/projeto-chiaroscuro/parceiros.html
+++ b/projeto-chiaroscuro/parceiros.html
@@ -42,6 +42,8 @@
 
         <section class="py-5 bg-darker">
             <div class="container">
+                <h2 class="visually-hidden">Lista de Parceiros e Tecnologias</h2>
+                
                 <div class="row g-4">
                     
                     <div class="col-md-4 col-sm-6">
