--- a/projeto-chiaroscuro/projeto.html
+++ b/projeto-chiaroscuro/projeto.html
@@ -181,6 +181,8 @@
 
         <section class="py-5 text-center">
             <div class="container">
+                <h2 class="visually-hidden">Navegação</h2>
+                
                 <a href="#" class="btn btn-outline-light px-5">
                     <i class="fas fa-arrow-up me-2"></i> Voltar ao Topo
                 </a>
